add SetMyUserName
